Musicians page basically working

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -9,6 +9,10 @@ $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
+$grey-text: #424242;
+
+.grey-text
+  color: $grey-text;
 
 .navbar .navbar-menu
   box-shadow:none !important
