--- a/src/components/Musicians.scss
+++ b/src/components/Musicians.scss
@@ -12,16 +12,20 @@
   
     .info {
       display: flex;
+      flex-direction: column;
     }
   
     .photo {
       flex-shrink: 0;
       width: 300px;
+      margin: 1em;
     }
   
-    .bio {
-      margin-left: 1em;
-  
+    blockquote {
+      padding: 0 0 0 1em;
+      border-left: 5px solid orange;
+      overflow: hidden;
+
       color: $grey-text;
       font-style: italic;
     }
