--- a/src/components/Collapser.scss
+++ b/src/components/Collapser.scss
@@ -4,10 +4,15 @@
 
   .collapsable {
     overflow: hidden;
+    transition: max-height 0.5s ease;
+
+    &.expanded {
+      overflow: scroll;
+    }
   }
    
   .more {
-    
+
     .toggle {
       width: 100%;
       font-size: 1rem;
