--- a/src/components/Collapser.scss
+++ b/src/components/Collapser.scss
@@ -3,11 +3,26 @@
 .collapser {
 
   .collapsable {
+    position: relative;
     overflow: hidden;
     transition: max-height 0.5s ease;
+  }
 
-    &.expanded {
+  .fadefoot {
+    position: absolute;
+    bottom: 0;
+    left: 5px;
+    right: 0;
+    background: linear-gradient(to top, whitesmoke, rgba(red(whitesmoke), green(whitesmoke), blue(whitesmoke), 0.5));
+  }
+
+  &.expanded {
+    .collapsable {
       overflow: scroll;
+    }
+
+    .hide-expanded {
+      display: none;
     }
   }
    
