Re-jiggle the members page

--- a/src/components/TermDates.scss
+++ b/src/components/TermDates.scss
@@ -1,7 +1,7 @@
 @import './all';
 
-.content.term-dates {
-  ul {
+.term-dates-wrapper {
+  ul.term-dates {
     margin-left: 0;
     list-style: none;
     font-size: 1.5rem;
